# pina

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  api-docs.t.md  changelog.md  clippy.toml  deny.toml  devenv.nix  devenv.yaml  dprint.json  knope.toml  monochange.toml  mutants.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  rust-toolchain.toml  template.t.md
codama/clients/rust/: Cargo.toml
codama/clients/rust/anchor_declare_id/: Cargo.toml
codama/clients/rust/anchor_declare_program/: Cargo.toml
codama/clients/rust/anchor_duplicate_mutable_accounts/: Cargo.toml
codama/clients/rust/anchor_errors/: Cargo.toml
codama/clients/rust/anchor_events/: Cargo.toml
codama/clients/rust/anchor_floats/: Cargo.toml
codama/clients/rust/anchor_realloc/: Cargo.toml
codama/clients/rust/anchor_system_accounts/: Cargo.toml
codama/clients/rust/anchor_sysvars/: Cargo.toml
codama/clients/rust/counter_program/: Cargo.toml
codama/clients/rust/escrow_program/: Cargo.toml
codama/clients/rust/hello_solana/: Cargo.toml
codama/clients/rust/pina_bpf/: Cargo.toml
codama/clients/rust/prop_amm_program/: Cargo.toml
codama/clients/rust/role_registry_program/: Cargo.toml
codama/clients/rust/staking_rewards_program/: Cargo.toml
codama/clients/rust/todo_program/: Cargo.toml
codama/clients/rust/transfer_sol/: Cargo.toml
codama/clients/rust/vesting_program/: Cargo.toml
crates/pina/: Cargo.toml  changelog.md  readme.md
crates/pina/src/: cpi.rs  error.rs  errors.rs  impls.rs  introspection.rs  lib.rs  loaders.rs  macros.rs  pda.rs  token.rs  token_2022.rs  traits.rs  transaction.rs  utils.rs
crates/pina/src/_previous/: cpi.rs  loaders.rs  traits.rs
crates/pina/src/pod/: mod.rs  primitives.rs
crates/pina/tests/: account_macro.rs  accounts_derive.rs  adversarial_invariants.rs  benchmarks.rs  cpi_helpers.rs  discriminator_macro.rs  error_macro.rs  error_types.rs  event_macro.rs  fuzz_discriminator.rs  instruction_macro.rs  integration.rs  introspection.rs  miri_loader_guards.rs  pda_functions.rs  prop_utils.rs  utils_functions.rs
crates/pina_cli/: Cargo.toml  changelog.md  readme.md  rules.md
crates/pina_cli/src/: codama.rs  error.rs  init.rs  lib.rs  main.rs
crates/pina_cli/src/codegen/: mod.rs
crates/pina_cli/src/ir/: mod.rs
crates/pina_cli/src/parse/: account_state.rs  accounts_struct.rs  collision.rs  discriminator.rs  doc_comments.rs  entrypoint.rs  error_enum.rs  instruction_data.rs  mod.rs  module_resolver.rs  program_id.rs  seeds.rs  types.rs  validation.rs
crates/pina_cli/tests/: cli_snapshots.rs  codama_anchor_idls.rs  codama_idls.rs  examples.rs  fixtures.rs  init_command.rs  profile_command.rs
crates/pina_cli/tests/fixtures/: doc_comments.rs  error_enum.rs  minimal.rs  multiple_instructions.rs  pda_seeds.rs  single_account.rs  single_instruction.rs  validation_known_programs.rs  validation_signer_writable.rs
crates/pina_cli/tests/snapshots/: cli_snapshots__codama_generate_invalid_argument_error.snap  cli_snapshots__codama_generate_missing_examples_path_error.snap  cli_snapshots__codama_generate_success_output.snap  cli_snapshots__codama_generate_unknown_example_error.snap  cli_snapshots__idl_success_output.snap  examples__counter_program.snap  examples__escrow_program.snap  examples__hello_solana.snap  examples__todo_program.snap  examples__transfer_sol.snap  (+9 more)
crates/pina_codama_renderer/: Cargo.toml  parity.md  readme.md
crates/pina_codama_renderer/src/: __tests.rs  lib.rs  main.rs
crates/pina_macros/: Cargo.toml  changelog.md  readme.md
crates/pina_macros/src/: args.rs  lib.rs  tests.rs
crates/pina_macros/tests/: ui.rs
crates/pina_pod_primitives/: Cargo.toml  changelog.md  readme.md
crates/pina_pod_primitives/src/: error.rs  lib.rs  macros.rs  option.rs  pod_bool.rs  pod_numeric.rs  string.rs  vec.rs
crates/pina_pod_primitives/tests/: fuzz_pod.rs  kani_harnesses.rs
crates/pina_profile/: Cargo.toml  readme.md
crates/pina_profile/src/: cost.rs  elf.rs  lib.rs  output.rs  sbf.rs
crates/pina_profile/tests/: integration.rs
crates/pina_sdk_ids/: Cargo.toml  changelog.md  readme.md
crates/pina_sdk_ids/src/: lib.rs
crates/pina_sdk_ids/tests/: prop_ids.rs
crates/pina_token_2022_extensions/: Cargo.toml  changelog.md
crates/pina_token_2022_extensions/src/: confidential_mint_burn.rs  confidential_transfer.rs  confidential_transfer_fee.rs  cpi_guard.rs  default_account_state.rs  group_member_pointer.rs  group_pointer.rs  immutable_owner.rs  interest_bearing_mint.rs  lib.rs  memo_transfer.rs  metadata.rs  metadata_pointer.rs  mint_close_authority.rs  non_transferable.rs  pausable.rs  permanent_delegate.rs  reallocate.rs  scaled_ui_amount.rs  token_group.rs  transfer_fee.rs  transfer_hook.rs
crates/solapino_macros/: Cargo.toml  readme.md
crates/solapino_macros/src/: lib.rs
examples/anchor_duplicate_mutable_accounts/: Cargo.toml  readme.md
examples/anchor_duplicate_mutable_accounts/src/: lib.rs
examples/anchor_realloc/: Cargo.toml  readme.md
examples/anchor_realloc/src/: lib.rs
examples/counter_program/: Cargo.toml  readme.md
examples/counter_program/src/: lib.rs
examples/counter_program/tests/: cu_benchmarks.rs
examples/escrow_program/: Cargo.toml  build.rs  readme.md
examples/escrow_program/src/: lib.rs
examples/pinocchio_bpf_starter/: Cargo.toml
examples/pinocchio_bpf_starter/src/: lib.rs
lib/: Cargo.toml
lib/examples/: simple.rs
lib/src/: cpi.rs  lib.rs  loaders.rs  macros.rs  traits.rs  utils.rs
lints/deny_heap_allocations_in_onchain_instruction_handlers/: Cargo.toml
lints/deny_heap_allocations_in_onchain_instruction_handlers/src/: lib.rs
lints/require_canonical_instruction_dispatch_for_idl/: Cargo.toml
lints/require_canonical_instruction_dispatch_for_idl/src/: lib.rs
lints/require_explicit_discriminators_and_seed_namespaces/: Cargo.toml
lints/require_explicit_discriminators_and_seed_namespaces/src/: lib.rs
lints/require_program_owned_before_lamport_mutation/: Cargo.toml
lints/require_program_owned_before_lamport_mutation/src/: lib.rs
(+460 files in other folders)
