[workspace]
resolver = "2"
members = [
	"crates/pina",
	"crates/pina_macros",
	"crates/pina_sdk_ids",
	"examples/escrow_program",
]

[workspace.package]
edition = "2024"
homepage = "https://pina.rs"
keywords = ["solana", "pinnochio"]
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/pina-rs/pina"
rust-version = "1.86.0"

[workspace.dependencies]
bytemuck = { default-features = false, version = "^1" }
darling = { default-features = false, version = "^0.21" }
heck = { default-features = false, version = "^0.5" }
mollusk-svm = { default-features = false, version = "^0.8" }
paste = { default-features = false, version = "^1" }
pinocchio = { default-features = false, version = "^0.10", features = ["cpi"] }
pinocchio-associated-token-account = { default-features = false, version = "^0.3" }
pinocchio-memo = { default-features = false, version = "^0.3" }
pinocchio-system = { default-features = false, version = "^0.5" }
pinocchio-token = { default-features = false, version = "^0.5" }
pinocchio-token-2022 = { default-features = false, version = "^0.2" }
solana-address = { default-features = false, version = "^2.0", features = ["bytemuck", "decode"] }
solana-program-log = { default-features = false, version = "^1.1" }
proc-macro2 = { default-features = false, version = "^1" }
quote = { default-features = false, version = "^1" }
syn = { default-features = false, version = "^2", features = ["full"] }
test_utils_solana = { default-features = false, version = "^0.8" }
thiserror = { default-features = false, version = "^2" }
tokio = { default-features = false, version = "^1" }
typed-builder = { default-features = false, version = "^0.23" }
wasm_client_solana = { default-features = false, version = "^0.10" }

# publishable crates
pina = { default-features = false, path = "crates/pina", version = "0.2.0" }
pina_macros = { default-features = false, path = "crates/pina_macros", version = "0.2.0" }
pina_sdk_ids = { default-features = false, path = "crates/pina_sdk_ids", version = "0.2.0" }

[workspace.metadata.bin]
cargo-dylint = { version = "5.0.0" }
cargo-insta = { version = "1.44.3" }
cargo-llvm-cov = { version = "0.6.21" }
cargo-nextest = { version = "0.9.114" }
cargo-semver-checks = { version = "0.45.0" }
cargo-workspaces = { version = "0.4.2" }
dylint-link = { version = "5.0.0", bins = ["dylint-link"] }
knope = { version = "0.21.7", bins = ["knope"] }
sbpf-linker = { version = "0.1.5", bins = ["sbpf-linker"] }
solana-verify = { version = "0.4.11", bins = ["solana-verify"] }

[workspace.lints.rust]
# Group lints
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# individual lints
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
	'cfg(target_os, values("solana"))',
	'cfg(target_feature, values("static-syscalls"))',
]

[workspace.lints.clippy]
# group lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# individual lints
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
