[workspace]
resolver = "2"
members = [
	"codama/clients/rust/anchor_declare_id",
	"codama/clients/rust/anchor_declare_program",
	"codama/clients/rust/anchor_duplicate_mutable_accounts",
	"codama/clients/rust/anchor_errors",
	"codama/clients/rust/anchor_events",
	"codama/clients/rust/anchor_floats",
	"codama/clients/rust/anchor_realloc",
	"codama/clients/rust/anchor_system_accounts",
	"codama/clients/rust/anchor_sysvars",
	"codama/clients/rust/counter_program",
	"codama/clients/rust/escrow_program",
	"codama/clients/rust/hello_solana",
	"codama/clients/rust/pina_bpf",
	"codama/clients/rust/todo_program",
	"codama/clients/rust/transfer_sol",
	"crates/pina",
	"crates/pina_cli",
	"crates/pina_codama_renderer",
	"crates/pina_macros",
	"crates/pina_pod_primitives",
	"crates/pina_sdk_ids",
	"examples/anchor_declare_id",
	"examples/anchor_declare_program",
	"examples/anchor_duplicate_mutable_accounts",
	"examples/anchor_errors",
	"examples/anchor_events",
	"examples/anchor_floats",
	"examples/anchor_realloc",
	"examples/anchor_system_accounts",
	"examples/anchor_sysvars",
	"examples/counter_program",
	"examples/escrow_program",
	"examples/hello_solana",
	"examples/pina_bpf",
	"examples/todo_program",
	"examples/transfer_sol",
	"security/00-signer-authorization/secure",
	"security/01-account-data-matching/secure",
	"security/02-owner-checks/secure",
	"security/03-type-cosplay/secure",
	"security/04-initialization/secure",
	"security/05-arbitrary-cpi/secure",
	"security/06-duplicate-mutable-accounts/secure",
	"security/07-bump-seed-canonicalization/secure",
	"security/08-pda-sharing/secure",
	"security/09-closing-accounts/secure",
	"security/10-sysvar-address-checking/secure",
]
exclude = [
	"security/00-signer-authorization/insecure",
	"security/01-account-data-matching/insecure",
	"security/02-owner-checks/insecure",
	"security/03-type-cosplay/insecure",
	"security/04-initialization/insecure",
	"security/05-arbitrary-cpi/insecure",
	"security/06-duplicate-mutable-accounts/insecure",
	"security/07-bump-seed-canonicalization/insecure",
	"security/08-pda-sharing/insecure",
	"security/09-closing-accounts/insecure",
	"security/10-sysvar-address-checking/insecure",
	"lints/require_owner_before_token_cast",
	"lints/require_empty_before_init",
	"lints/require_program_check_before_cpi",
]

[workspace.package]
edition = "2024"
homepage = "https://pina.rs"
keywords = ["solana", "pinocchio"]
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/pina-rs/pina"
rust-version = "1.86.0"

[workspace.dependencies]
bytemuck = { default-features = false, version = "^1" }
clap = { default-features = false, version = "^4", features = ["derive", "std"] }
codama-nodes = { default-features = false, version = "^0.7" }
darling = { default-features = false, version = "^0.21" }
heck = { default-features = false, version = "^0.5" }
insta = { default-features = false, version = "^1" }
mollusk-svm = { default-features = false, version = "^0.8" }
num-derive = { version = "^0.4" }
num-traits = { version = "^0.2" }
paste = { default-features = false, version = "^1" }
pina_codama_renderer = { default-features = false, path = "crates/pina_codama_renderer" }
pinocchio = { default-features = false, version = "^0.10", features = ["cpi"] }
pinocchio-associated-token-account = { default-features = false, version = "^0.3" }
pinocchio-memo = { default-features = false, version = "^0.3" }
pinocchio-system = { default-features = false, version = "^0.5" }
pinocchio-token = { default-features = false, version = "^0.5" }
pinocchio-token-2022 = { default-features = false, version = "^0.2" }
proc-macro2 = { default-features = false, version = "^1" }
quote = { default-features = false, version = "^1" }
serde = { default-features = false, version = "^1" }
serde_json = { default-features = false, version = "^1", features = ["std"] }
solana-account-info = { version = "^3" }
solana-address = { default-features = false, version = "^2.0", features = ["bytemuck", "curve25519", "decode"] }
solana-cpi = { version = "^3" }
solana-instruction = { version = "^3" }
solana-program-error = { version = "^3" }
solana-program-log = { default-features = false, version = "^1.1" }
solana-pubkey = { version = "^4", features = ["bytemuck"] }
syn = { default-features = false, version = "^2", features = ["full"] }
test_utils_solana = { default-features = false, version = "^0.8" }
thiserror = { default-features = false, version = "^2" }
tokio = { default-features = false, version = "^1" }
typed-builder = { default-features = false, version = "^0.23" }
walkdir = { default-features = false, version = "^2" }
wasm_client_solana = { default-features = false, version = "^0.10" }

# publishable crates
pina = { default-features = false, path = "crates/pina", version = "0.3.0" }
pina_macros = { default-features = false, path = "crates/pina_macros", version = "0.3.0" }
pina_pod_primitives = { default-features = false, path = "crates/pina_pod_primitives", version = "0.3.0" }
pina_sdk_ids = { default-features = false, path = "crates/pina_sdk_ids", version = "0.3.0" }

[workspace.metadata.dylint]
libraries = [
	{ path = "lints/require_owner_before_token_cast" },
	{ path = "lints/require_empty_before_init" },
	{ path = "lints/require_program_check_before_cpi" },
]

[workspace.metadata.bin]
cargo-dylint = { version = "5.0.0" }
cargo-audit = { version = "0.22.1" }
cargo-deny = { version = "0.19.0" }
cargo-insta = { version = "1.44.3" }
cargo-llvm-cov = { version = "0.6.21" }
cargo-nextest = { version = "0.9.114" }
cargo-semver-checks = { version = "0.45.0" }
cargo-workspaces = { version = "0.4.2" }
mdt_cli = { version = "0.0.1", git = "https://github.com/ifiokjr/mdt", rev = "036caa93b77c40fe68890416497cefdaf08f96a1", bins = ["mdt"], locked = true }
dylint-link = { version = "5.0.0", bins = ["dylint-link"] }
knope = { version = "0.22.3", bins = ["knope"] }
sbpf-linker = { version = "0.1.8", bins = ["sbpf-linker"] }
solana-verify = { version = "0.4.11", bins = ["solana-verify"] }

[workspace.lints.rust]
# Group lints
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# individual lints
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
	'cfg(target_os, values("solana"))',
	'cfg(target_feature, values("static-syscalls"))',
]

[workspace.lints.clippy]
# group lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# individual lints
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
