[workspace]
resolver = "2"
members = [
	"codama/clients/rust/anchor_declare_id",
	"codama/clients/rust/anchor_declare_program",
	"codama/clients/rust/anchor_duplicate_mutable_accounts",
	"codama/clients/rust/anchor_errors",
	"codama/clients/rust/anchor_events",
	"codama/clients/rust/anchor_floats",
	"codama/clients/rust/anchor_realloc",
	"codama/clients/rust/anchor_system_accounts",
	"codama/clients/rust/anchor_sysvars",
	"codama/clients/rust/counter_program",
	"codama/clients/rust/escrow_program",
	"codama/clients/rust/hello_solana",
	"codama/clients/rust/pina_bpf",
	"codama/clients/rust/prop_amm_program",
	"codama/clients/rust/role_registry_program",
	"codama/clients/rust/staking_rewards_program",
	"codama/clients/rust/todo_program",
	"codama/clients/rust/transfer_sol",
	"codama/clients/rust/vesting_program",
	"crates/pina",
	"crates/pina_cli",
	"crates/pina_codama_renderer",
	"crates/pina_macros",
	"crates/pina_pod_primitives",
	"crates/pina_profile",
	"crates/pina_sdk_ids",
	"examples/anchor_declare_id",
	"examples/anchor_declare_program",
	"examples/anchor_duplicate_mutable_accounts",
	"examples/anchor_errors",
	"examples/anchor_events",
	"examples/anchor_floats",
	"examples/anchor_realloc",
	"examples/anchor_system_accounts",
	"examples/anchor_sysvars",
	"examples/counter_program",
	"examples/escrow_program",
	"examples/hello_solana",
	"examples/pina_bpf",
	"examples/prop_amm_program",
	"examples/role_registry_program",
	"examples/staking_rewards_program",
	"examples/todo_program",
	"examples/transfer_sol",
	"examples/vesting_program",
	"security/00-signer-authorization/secure",
	"security/01-account-data-matching/secure",
	"security/02-owner-checks/secure",
	"security/03-type-cosplay/secure",
	"security/04-initialization/secure",
	"security/05-arbitrary-cpi/secure",
	"security/06-duplicate-mutable-accounts/secure",
	"security/07-bump-seed-canonicalization/secure",
	"security/08-pda-sharing/secure",
	"security/09-closing-accounts/secure",
	"security/10-sysvar-address-checking/secure",
]
exclude = [
	"security/00-signer-authorization/insecure",
	"security/01-account-data-matching/insecure",
	"security/02-owner-checks/insecure",
	"security/03-type-cosplay/insecure",
	"security/04-initialization/insecure",
	"security/05-arbitrary-cpi/insecure",
	"security/06-duplicate-mutable-accounts/insecure",
	"security/07-bump-seed-canonicalization/insecure",
	"security/08-pda-sharing/insecure",
	"security/09-closing-accounts/insecure",
	"security/10-sysvar-address-checking/insecure",
	"lints/require_owner_before_token_cast",
	"lints/require_empty_before_init",
	"lints/require_program_check_before_cpi",
]

[workspace.package]
version = "0.8.0"
edition = "2024"
homepage = "https://pina.rs"
keywords = ["solana", "pinocchio"]
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/pina-rs/pina"
rust-version = "1.89.0"

[workspace.dependencies]
bytemuck = { default-features = false, version = "^1" }
clap = { default-features = false, version = "^4", features = ["derive", "std"] }
codama-nodes = { default-features = false, version = "0.8.0" }
darling = { default-features = false, version = "0.23.0" }
heck = { default-features = false, version = "^0.5" }
insta = { default-features = false, version = "^1" }
insta-cmd = { default-features = false, version = "^0.6.0" }
mollusk-svm = { default-features = false, version = "0.11.0" }
num-derive = { version = "^0.4", default-features = false }
num-traits = { version = "^0.2", default-features = false }
pastey = { default-features = false, version = "^0.2" }
pinocchio = { default-features = false, version = "^0.11", features = ["cpi"] }
pinocchio-associated-token-account = { default-features = false, version = "^0.4" }
pinocchio-memo = { default-features = false, version = "^0.4" }
pinocchio-system = { default-features = false, version = "^0.6" }
pinocchio-token = { default-features = false, version = "^0.6" }
pinocchio-token-2022 = { default-features = false, version = "^0.3" }
prettyplease = { default-features = false, version = "^0.2" }
proc-macro2 = { default-features = false, version = "^1" }
proptest = { default-features = false, version = "^1", features = ["std"] }
quote = { default-features = false, version = "^1" }
serde = { default-features = false, version = "^1" }
serde_json = { default-features = false, version = "^1", features = ["std"] }
solana-account = { version = "^3", default-features = false }
solana-account-info = { version = "^3", default-features = false }
solana-address = { default-features = false, version = "^2.0", features = ["bytemuck", "curve25519", "decode"] }
solana-cpi = { version = "^3", default-features = false }
solana-instruction = { version = "^3", default-features = false }
solana-program-error = { version = "^3", default-features = false }
solana-program-log = { default-features = false, version = "^1.1" }
solana-pubkey = { version = "^4", features = ["bytemuck"], default-features = false }
solana-sdk-ids = { version = "^3", default-features = false }
solana-system-interface = { version = "^2", default-features = false }
syn = { default-features = false, version = "^2", features = ["full"] }
tempfile = { default-features = false, version = "^3" }
thiserror = { default-features = false, version = "^2" }
tokio = { default-features = false, version = "^1" }
trybuild = { default-features = false, version = "^1" }
typed-builder = { default-features = false, version = "^0.23" }
walkdir = { default-features = false, version = "^2" }

# publishable crates
object = { default-features = false, version = "^0.39.0" }
pina = { default-features = false, path = "crates/pina", version = "0.8.0" }
pina_cli = { default-features = false, path = "crates/pina_cli", version = "0.8.0" }
pina_codama_renderer = { default-features = false, path = "crates/pina_codama_renderer", version = "0.8.0" }
pina_macros = { default-features = false, path = "crates/pina_macros", version = "0.8.0" }
pina_pod_primitives = { default-features = false, path = "crates/pina_pod_primitives", version = "0.8.0" }
pina_profile = { default-features = false, path = "crates/pina_profile", version = "0.8.0" }
pina_sdk_ids = { default-features = false, path = "crates/pina_sdk_ids", version = "0.8.0" }

[workspace.metadata.bin]
cargo-semver-checks = { version = "0.46.0" }
cargo-workspaces = { version = "0.4.2" }
kani-verifier = { version = "0.67.0", bins = ["kani", "cargo-kani"] }

[workspace.metadata.dylint]
libraries = [
	{ path = "lints/require_owner_before_token_cast" },
	{ path = "lints/require_empty_before_init" },
	{ path = "lints/require_program_check_before_cpi" },
	{ path = "lints/deny_heap_allocations_in_onchain_instruction_handlers" },
	{ path = "lints/require_program_owned_before_lamport_mutation" },
	{ path = "lints/require_writable_before_account_resize" },
	{ path = "lints/require_zeroed_before_close" },
	{ path = "lints/require_sysvar_assert_before_sysvar_use" },
	{ path = "lints/require_type_assert_before_zero_copy_cast" },
	{ path = "lints/require_associated_token_address_before_ata_cast" },
	{ path = "lints/require_idl_root_to_define_one_program_id" },
	{ path = "lints/require_canonical_instruction_dispatch_for_idl" },
	{ path = "lints/require_explicit_discriminators_and_seed_namespaces" },
]

[workspace.lints.rust]
# Group lints
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# individual lints
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
	'cfg(target_os, values("solana"))',
	'cfg(target_feature, values("static-syscalls"))',
	'cfg(kani)',
]

[workspace.lints.clippy]
# group lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# individual lints
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
