[package]
name = "steel"
description = "Solana smart contract framework"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
deafult = []

[dependencies]
bytemuck.workspace = true
num_enum.workspace = true
solana-program.workspace = true

[[example]]
name = "simple"
crate-type = ["staticlib"]