[package]
name = "steel"
description = "Solana smart contract framework"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
deafult = []
logs = [] # Enable logging for validation errors
spl = ["dep:spl-associated-token-account", "dep:spl-token-2022"] # Enable SPL support

[dependencies]
bytemuck = { workspace = true }
num_enum = { workspace = true }
paste = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true, optional = true }
spl-token-2022 = { workspace = true, optional = true }

[dev-dependencies]
thiserror.workspace = true

[[example]]
name = "simple"
crate-type = ["staticlib"]