[package]
name = "pina"
version = "0.2.0"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
description = "a solana and pinocchio smart contract framework"

[features]
default = ["logs", "derive"]
logs = ["dep:pinocchio-log"] # Enable logging for errors
token = [
	"dep:pinocchio-associated-token-account",
	"dep:pinocchio-token",
	"dep:pinocchio-token-2022",
]
derive = ["dep:pina_macros"]

[dependencies]
bytemuck = { workspace = true, features = ["derive", "const_zeroed", "align_offset"] }
paste = { workspace = true }
pina_macros = { workspace = true, optional = true }
pinocchio = { workspace = true }
pinocchio-associated-token-account = { workspace = true, optional = true }
pinocchio-log = { workspace = true, optional = true, features = ["macro"] }
pinocchio-pubkey = { workspace = true, features = ["const"] }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true, optional = true }
pinocchio-token-2022 = { workspace = true, optional = true }
typed-builder = { workspace = true }

[lints]
workspace = true
