[package]
name = "pina"
version = "0.3.0"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
description = "a solana and pinocchio smart contract framework"

[features]
default = ["logs", "derive"]
logs = ["dep:solana-program-log"] # Enable logging for errors
token = [
	"dep:pinocchio-associated-token-account",
	"dep:pinocchio-token",
	"dep:pinocchio-token-2022",
]
derive = ["dep:pina_macros"]

[dependencies]
bytemuck = { workspace = true, features = ["derive", "const_zeroed", "align_offset"] }
paste = { workspace = true }
pina_macros = { workspace = true, optional = true }
pinocchio = { workspace = true }
pinocchio-associated-token-account = { workspace = true, optional = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true, optional = true }
pinocchio-token-2022 = { workspace = true, optional = true }
solana-address = { workspace = true }
solana-program-log = { workspace = true, optional = true, features = ["macro"] }
typed-builder = { workspace = true }

[lints]
workspace = true
