[package]
name = "pina"
version = { workspace = true }
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
description = "a solana and pinocchio smart contract framework"

[features]
default = ["logs", "derive"]
logs = ["dep:solana-program-log"] # Enable logging for errors
token = [
	"dep:pinocchio-associated-token-account",
	"dep:pinocchio-token",
	"dep:pinocchio-token-2022",
]
derive = ["dep:pina_macros"]

[dependencies]
bytemuck = { workspace = true, features = ["derive", "const_zeroed", "align_offset"], default-features = true }
pastey = { workspace = true, default-features = true }
pina_macros = { workspace = true, optional = true }
pina_pod_primitives = { workspace = true }
pinocchio = { workspace = true, default-features = true }
pinocchio-associated-token-account = { workspace = true, optional = true, default-features = true }
pinocchio-system = { workspace = true, default-features = true }
pinocchio-token = { workspace = true, optional = true, default-features = true }
pinocchio-token-2022 = { workspace = true, optional = true, default-features = true }
solana-address = { workspace = true, default-features = true }
solana-program-log = { workspace = true, optional = true, features = ["macro"], default-features = true }
typed-builder = { workspace = true, default-features = true }

[dev-dependencies]
proptest = { workspace = true, default-features = true }

[lints]
workspace = true
