[package]
name = "pina_cli"
version = { workspace = true }
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = true
readme = "readme.md"
repository.workspace = true
description = "CLI tool for Pina Solana programs (IDL generation and more)"

[[bin]]
name = "pina"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, default-features = true }
codama-nodes = { workspace = true, default-features = true }
heck = { workspace = true, default-features = true }
pina_codama_renderer = { workspace = true }
pina_profile = { workspace = true }
proc-macro2 = { workspace = true, default-features = true }
serde = { workspace = true, features = ["derive"], default-features = true }
serde_json = { workspace = true, default-features = true }
syn = { workspace = true, default-features = true, features = ["full", "extra-traits", "visit"] }
thiserror = { workspace = true, default-features = true }
walkdir = { workspace = true, default-features = true }

[dev-dependencies]
insta = { workspace = true, features = ["json"], default-features = true }
insta-cmd = { workspace = true, default-features = true }
object = { features = ["write", "elf", "std"], workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
