[package]
name = "pina_codama_renderer"
version = { workspace = true }
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Codama Rust renderer that generates Pina-style bytemuck models and discriminator-first layouts"

[dependencies]
clap = { workspace = true, features = ["derive", "std"], default-features = true }
codama-nodes = { workspace = true, default-features = true }
heck = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }

[dev-dependencies]
insta = { workspace = true, default-features = true }

[lints]
workspace = true
