[package]
name = "pina_macros"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "derive macros for a solana and pinocchio smart contract framework"

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true, default-features = true }
heck = { workspace = true, default-features = true }
proc-macro2 = { workspace = true, default-features = true }
quote = { workspace = true, default-features = true }
syn = { workspace = true, default-features = true, features = ["full"] }

[dev-dependencies]
pina = { workspace = true, default-features = true }

[lints]
workspace = true
