[package]
name = "pina_pod_primitives"
version = { workspace = true }
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
description = "Alignment-safe POD primitive wrappers for Solana account layouts"

[dependencies]
bytemuck = { workspace = true, features = ["derive"] }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
