[package]
name = "pina_profile"
version = { workspace = true }
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
description = "Static CU profiler for Solana SBF programs"

[dependencies]
object = { version = "0.36", default-features = false, features = ["read", "elf", "std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true, default-features = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
