[package]
name = "pina_profile"
version = { workspace = true }
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
description = "Static CU profiler for Solana SBF programs"

[dependencies]
object = { default-features = false, features = ["read", "elf", "std"], workspace = true }
serde = { workspace = true, features = ["derive"], default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }

[dev-dependencies]
object = { features = ["read", "elf", "std", "write"], workspace = true, default-features = true }
tempfile = { workspace = true, default-features = true }

[lints]
workspace = true
