[package]
name = "pina_sdk_ids"
version = "0.2.0"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "pina compatible sdk id's"

[dependencies]
pinocchio-pubkey = { workspace = true, default-features = true }

[lints]
workspace = true
