[package]
name = "pina_sdk_ids"
version = "0.3.0"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "pina compatible sdk id's"

[dependencies]
solana-address = { workspace = true }

[lints]
workspace = true
