[package]
name = "pina_sdk_ids"
version = "0.3.1"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "readme.md"
repository.workspace = true
rust-version.workspace = true
description = "pina compatible sdk id's"

[dependencies]
solana-address = { workspace = true }

[lints]
workspace = true
