[package]
name = "pina_token_2022_extensions"
version = "0.1.1"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "draft token 2022 extensions for pinocchio and solana"

[dependencies]
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-token-2022 = { workspace = true }

[lints]
workspace = true
