[package]
name = "anchor_duplicate_mutable_accounts"
version = "0.0.0"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
readme = "readme.md"
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
bpf-entrypoint = []

[dependencies]
pina = { workspace = true, features = ["derive"] }

[lints]
workspace = true
