[package]
name = "anchor_realloc"
version = "0.0.0"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
bpf-entrypoint = []

[dependencies]
pina = { workspace = true, features = ["derive"] }

[lints]
workspace = true
