[package]
name = "counter_program"
version = "0.0.0"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
readme.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
bpf-entrypoint = []

[dependencies]
pina = { workspace = true, features = ["logs", "derive"] }

[dev-dependencies]
mollusk-svm = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-system-interface = { workspace = true }

[lints]
workspace = true
