[package]
name = "escrow_program"
version.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
bpf-entrypoint = []

[dependencies]
bytemuck = { workspace = true }
num_enum = { workspace = true }
pina = { workspace = true, features = ["logs", "token", "derive"] }

[dev-dependencies]
mollusk-svm = { workspace = true }
solana-program = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
